trying to fix the wrapping issue

--- a/static/login.css
+++ b/static/login.css
@@ -116,7 +116,6 @@ button {
 
 	border: 1px;
 	border-style: solid;
-
 }
 
 #inputbox {
@@ -126,7 +125,6 @@ button {
 
 	border: 1px;
 	border-style: solid;
-	border-color: blue;
 
 }
 
@@ -135,7 +133,6 @@ button {
 
 	border: 1px;
 	border-style: solid;
-	border-color: green;
 }
 
 
